--- a/PPH21/App/composer.json
+++ b/PPH21/App/composer.json
@@ -1,6 +1,27 @@
 {
+    "type":"library",
+    "license":"proprietary",
+    "name":"modernoop/pph21",
+    "authors":[{
+        "name":"Rokan Subhi F",
+        "email":"rokansubhi.f@gmail.com"
+    }],
     "require": {
-    "monolog/monolog": "1.23.*"
+        "php":"^7.2"
+    },
+    "config": {
+        "preferred-install":{
+            "*":"dist"
+        },
+    "sort-packages": true,
+    "classmap-authoritative": true,
+    "optimize-autoloader": true
+    },
+    "autoload": {
+        "psr-4": {
+            "ModernOOP\\StudiKasus\\PPH21\\":"src/"
+        }
     }
-    }
+}
+
     
